---------------------------------------------------------------------------------------------------
Version: 1.6.5
Date: 3/2/26
  Bugfixes:
    - Fixed that hex core GUI was sometimes getting updated rapidly and interfering with GUI controls. 
---------------------------------------------------------------------------------------------------
Version: 1.6.4
Date: 3/2/26
  Bugfixes:
    - Spiral world generation now respects planet size settings.
---------------------------------------------------------------------------------------------------
Version: 1.6.3
Date: 3/2/26
  Features:
    - Added the mod setting "World Generation Mode" for controlling the shape of terrain generation, currently with "Standard", "Spiral", and "Maze" modes.
  Bugfixes:
    - Added missing migration for existing hex core loaders to become rotatable.
  Scripting:
    - Added the remote interface "gameplay_statistics_recalculators".
---------------------------------------------------------------------------------------------------
Version: 1.6.2
Date: 3/2/26
  Features:
    - Hex core loaders can now be flipped.
  Balancing:
    - Some nonland (water, lava, etc.) hex tiles are now guaranteed to exist within five hexes of spawn on each planet.
  Changes:
    - Changed how progress bars for each statistic in the hex rank GUI visually progress, from logarithmic to cubed logarithmic (slows down how fast they go up).
  Bugfixes:
    - Fixed that spaceship speed readings in the hex rank GUI were on the wrong scale (per tick instead of per second).
    - Fixed that the counter for unique items traded in the hex rank GUI wasn't per surface as the description says it is.
    - Fixed that total resources depleted wasn't counting towards hex rank.
---------------------------------------------------------------------------------------------------
Version: 1.6.1
Date: 3/2/26
  Bugfixes:
    - Fixed hex rank HUD showing a scroll bar on some screens.